# sds_rag_v3

./: .env.example  .gitignore  CONFIG_README.md  README.md  UI_README.md  pyproject.toml  run_app.py
.ocontext/: context_20250824T104834.txt
examples/: config_usage_example.py
extracted_documents/2022 Q3 AAPL/: extraction_summary.txt  table_01_with_context.txt  table_02_with_context.txt  table_03_with_context.txt  table_04_with_context.txt  table_05_with_context.txt  table_06_with_context.txt  table_07_with_context.txt  table_08_with_context.txt  table_09_with_context.txt  table_10_with_context.txt  table_11_with_context.txt  table_12_with_context.txt  table_13_with_context.txt  table_14_with_context.txt  table_15_with_context.txt  table_16_with_context.txt  table_17_with_context.txt  table_18_with_context.txt  tmp6ch0adl8_full_text.txt
output/2022 Q3 AAPL/: extraction_summary.txt  table_01_with_context.txt  table_02_with_context.txt  table_03_with_context.txt  table_04_with_context.txt  table_05_with_context.txt  table_06_with_context.txt  table_07_with_context.txt  table_08_with_context.txt  table_09_with_context.txt  table_10_with_context.txt  table_11_with_context.txt  table_12_with_context.txt  table_13_with_context.txt  table_14_with_context.txt  table_15_with_context.txt  (+3 more)
test/: test_app.py  test_chatbot.py  test_chunking.py  test_config.py  test_embedding.py  test_end_to_end.py  test_imports.py  test_qdrant_connection.py  test_rag_pipeline.py  test_simple_chunking.py  test_simple_ui.py  test_ui_imports.py  test_vector_store.py
test_output/: embeddings.json
(+32 files in other folders)
